--- a/style.css
+++ b/style.css
@@ -20,6 +20,30 @@ h2{
     top: 10px ;
 }
 
+.range-container{
+    position: relative;
+}
+
+input[type='range']{
+    width: 300px;
+    margin: 18px 0;
+    -webkit-appearance: none;
+}
+
+input[type='range'] + label {
+    background-color: #fff;
+    position: absolute;
+    top: -25px;
+    left: 110px;
+    width: 80px;
+    padding: 5px 0;
+    text-align: center;
+    border-radius: 4px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+
+
 
 
 
