--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@ input[type='range']{
     -webkit-appearance: none;
 }
 
+input[type='range']:focus{
+    outline: none;
+}
+
+
+
 input[type='range'] + label {
     background-color: #fff;
     position: absolute;
@@ -40,8 +46,31 @@ input[type='range'] + label {
     text-align: center;
     border-radius: 4px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    
 }
 
+input[type='range']::-webkit-slider-runnable-track{
+    background: purple;
+    border-radius: 4px;
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+}
+
+
+
+input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    background: #fff;
+    border-radius: 50%;
+    border: 1px solid purple;
+    margin-top: -7px;
+    cursor: pointer;
+  }
+  
+    
 
 
 
