--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ input[type='range'] + label {
     
 }
 
+/* chrome & */
 input[type='range']::-webkit-slider-runnable-track{
     background: purple;
     border-radius: 4px;
